Forge 1.19.2, 1.18.2, and 1.16.5 release.